updated css for blog page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,25 +4,25 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway" rel="stylesheet">
 		</head>
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+	        		<li><a class="no_btn_link_head" href="/">home</a></li>
+		        	<li><a class="no_btn_link_head" href="/about">about</a></li>
+	        		<li><a class="no_btn_link_head" href="/blog">blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
-			
+
 			{{ content }}
-			
+
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:lori.burleson@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/lburl01">github.com/lburl01</a></li>
+	        		<li><a class="no_btn_link_foot" href="mailto:lori.burleson@gmail.com">email</a></li>
+	        		<li><a class="no_btn_link_foot" href="https://github.com/lburl01">github.com/lburl01</a></li>
 				</ul>
 			</footer>
 		</body>
