--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
     margin: 60px auto;
     width: 70%;
     background-color: #EEFFE9;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 nav ul {
   font-family: 'Open Sans Condensed', sans-serif;
@@ -54,9 +54,9 @@ nav ul li, footer ul li {
 }
 
 .no_btn_link_foot {
-    background-color: #BEE6CE;
+    background-color: #8BA897;
     text-align: center;
-    color: #000000;
+    color: #EEFFE9;
     border: 2px solid #EEFFE9;
     padding: 10px 25px 10px 25px;
 }
@@ -70,22 +70,28 @@ nav ul li, footer ul li {
 }
 
 .no_btn_link_foot:hover {
-    background-color: #BEE6CE;
-    color: #000000;
+    background-color: #8BA897;
+    color: #EEFFE9;
     font-weight: bolder;
     font-family: 'Open Sans Condensed', sans-serif;
-    border: 2px solid #89A594;
+    border: 2px solid #5B6D62;
 }
 
 h1 {
-    font-size: 3em;
-    font-family: 'Raleway', sans-serif;
-}
-p {
     font-size: 1.5em;
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+}
+
+h2 {
+  font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
+}
+
+p {
     line-height: 1.4em;
     color: #333;
-    font-family:
+    font-family: font-family: 'Open Sans', sans-serif;
 }
 footer {
     border-top: 3px solid #8BA897;
