--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway|Open+Sans" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway:300i,500|Open+Sans:400,600" rel="stylesheet">
 		</head>
 		<body>
 			<nav>
