updated css for body text, updated bloggin post, edited homepage blurb

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
 	    		<ul>
 	        		<li><a class="no_btn_link_foot" href="mailto:lori.burleson@gmail.com">email</a></li>
 	        		<li><a class="no_btn_link_foot" href="https://github.com/lburl01">github.com/lburl01</a></li>
+							<li><a class="no_btn_link_foot" href="https://www.theironyard.com/locations/durham.html">The Iron Yard, Durham</a></li>
 				</ul>
 			</footer>
 		</body>
