--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<h2 class="meta">{{ page.date | date_to_string }}</h2>
 
 <div class="post">
   {{ content }}
