--- a/css/main.css
+++ b/css/main.css
@@ -128,14 +128,24 @@ blockquote {
 }
 
 img {
-  max-width: 300px;
-  height: 300px;
+  max-width: 250px;
+  height: 250px;
+}
+
+.sidebar {
+  display: inline-block;
+  max-width: 250px;
 }
 
 .right {
-  width: 40%;
+  width: 60%;
   height: 100%;
-  padding-left: 10px;
+  padding-left: 20px;
   display: inline-block;
   vertical-align: top;
+}
+
+.gallery {
+  text-align: center;
+  display: table-cell;
 }
