added header and footer bars

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,23 +7,27 @@
 			<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway:300i,500|Open+Sans:400,600" rel="stylesheet">
 		</head>
 		<body>
-			<nav>
-	    		<ul>
+			<div class="header">
+				<div class="container">
+	    		<ul class="nav">
 	        		<li><a class="no_btn_link_head" href="/">home</a></li>
 		        	<li><a class="no_btn_link_head" href="/about">about</a></li>
 	    		</ul>
-			</nav>
+		</div>
+	</div>
 			<div class="container">
 
 			{{ content }}
 
 			</div><!-- /.container -->
-			<footer>
-	    		<ul>
+				<div class="footer">
+					<div class="container">
+	    		<ul class="foot_nav">
 	        		<li><a class="no_btn_link_foot" href="mailto:lori.burleson@gmail.com">email</a></li>
 	        		<li><a class="no_btn_link_foot" href="https://github.com/lburl01">github.com/lburl01</a></li>
 							<li><a class="no_btn_link_foot" href="https://www.theironyard.com/locations/durham.html">The Iron Yard, Durham</a></li>
 				</ul>
-			</footer>
+			</div>
+			</div>
 		</body>
 	</html>
