--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,11 @@
 ---
 layout: default
 ---
+<div class="container">
 <h1>{{ page.title }}</h1>
 <h2 class="meta">{{ page.date | date_to_string }}</h2>
 
 <div class="post">
   {{ content }}
+</div>
 </div>
