--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,80 @@
-body {
-    margin: 60px auto;
-    width: 70%;
+html, body, .wrapper {
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
     background-color: #EEFFE9;
     font-family: 'Open Sans', sans-serif;
     color: #2E3832;
 }
-nav ul {
+
+.container {
+max-width: 940px;
+margin: 0 auto;
+padding: 0 10px;
+}
+
+.header {
+  background-color: #E03C16;
+  margin: 0;
+  padding: 0;
+}
+
+.footer {
+  background-color: #8BA897;
+  margin: 0;
+  padding: 0px 0px 25px 0px;
+}
+
+.nav {
+  margin: 0;
+  padding: 0;
+}
+
+.header ul, .footer ul {
+    font-family: 'Open Sans Condensed', sans-serif;
+    list-style: none;
+    font-weight: 300;
+}
+
+.nav li, .footer li {
+    display: inline;
+    margin-right: 20px;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 1.5em;
+    font-weight: 300;
+    color: #2E3832;
+}
+
+.no_btn_link_foot {
+    background-color: #8BA897;
+    text-align: center;
+    color: #EEFFE9;
+    padding: 10px 25px 10px 25px;
+    border: 5px solid #8BA897;
+}
+
+.no_btn_link_head {
+    background-color: #E03C16;
+    text-align: center;
+    color: #EEFFE9;
+    padding: 10px 25px 10px 25px;
+    border: 5px solid #E03C16;
+}
+
+.no_btn_link_head:hover {
+  color: #EEFFE9;
+  font-weight: bolder;
   font-family: 'Open Sans Condensed', sans-serif;
-  padding: 0px;
-  list-style: none;
-  font-weight: bold;
+  border-bottom: 5px solid #A32B10;
+}
+
+.no_btn_link_foot:hover {
+    color: #EEFFE9;
+    font-weight: bolder;
+    font-family: 'Open Sans Condensed', sans-serif;
+    border-bottom: 5px solid #5B6D62;
 }
 
 a {
@@ -20,12 +85,12 @@ a {
   font-weight: bold;
   letter-spacing: 1px;
   text-decoration: none;
-  border: 2px solid #eeffe9;
+  border: 5px solid #eeffe9;
   padding: 10px 25px 10px 25px;
 }
 
 a:hover {
-  border: 2px solid #BA6D10;
+  border-bottom: 5px solid #BA6D10;
 }
 
 .post_link, .post_link:hover {
@@ -35,56 +100,6 @@ a:hover {
   background-color: #EEFFE9;
   padding: 0 2px 0 2px;
   border: 0;
-}
-
-footer ul {
-    font-family: 'Open Sans Condensed', sans-serif;
-    padding: 0px;
-    list-style: none;
-    font-weight: 300;
-}
-
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 1.5em;
-    font-weight: 300;
-    color: #2E3832;
-}
-
-.no_btn_link_head {
-  background-color: #E03C16;
-  text-align: center;
-  color: #EEFFE9;
-  border: 2px solid #EEFFE9;
-  padding: 10px 20px 10px 20px;
-  font-size: .8em;
-  font-weight: 300;
-}
-
-.no_btn_link_foot {
-    background-color: #8BA897;
-    text-align: center;
-    color: #EEFFE9;
-    border: 2px solid #EEFFE9;
-    padding: 10px 25px 10px 25px;
-}
-
-.no_btn_link_head:hover {
-  background-color: #E03C16;
-  color: #EEFFE9;
-  font-weight: bolder;
-  font-family: 'Open Sans Condensed', sans-serif;
-  border: 2px solid #A32B10;
-}
-
-.no_btn_link_foot:hover {
-    background-color: #8BA897;
-    color: #EEFFE9;
-    font-weight: bolder;
-    font-family: 'Open Sans Condensed', sans-serif;
-    border: 2px solid #5B6D62;
 }
 
 h1 {
@@ -102,10 +117,6 @@ p {
     line-height: 1.4em;
     color: #333;
     font-family: font-family: 'Open Sans', sans-serif;
-}
-footer {
-    border-top: 3px solid #8BA897;
-    font-size: .8em;
 }
 
 ul.posts {
