changed css files and layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,27 +7,23 @@
 			<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway:300i,500|Open+Sans:400,600" rel="stylesheet">
 		</head>
 		<body>
+			<div class="header_rule"></div>
 			<div class="header">
+				<img id="header_img" src="http://i.imgur.com/5xvo0AE.jpg" />
 				<div class="container">
 	    		<ul class="nav">
 	        		<li><a class="no_btn_link_head" href="/">home</a></li>
 		        	<li><a class="no_btn_link_head" href="/about">about</a></li>
-	    		</ul>
-		</div>
-	</div>
+					</ul>
+				</div>
+			</div>
+
 			<div class="container">
 
 			{{ content }}
 
 			</div><!-- /.container -->
-				<div class="footer">
-					<div class="container">
-	    		<ul class="foot_nav">
-	        		<li><a class="no_btn_link_foot" href="mailto:lori.burleson@gmail.com">email</a></li>
-	        		<li><a class="no_btn_link_foot" href="https://github.com/lburl01">github.com/lburl01</a></li>
-							<li><a class="no_btn_link_foot" href="https://www.theironyard.com/locations/durham.html">The Iron Yard, Durham</a></li>
-				</ul>
-			</div>
+			<div class="buffer">
 			</div>
 		</body>
 	</html>
