--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ html, body, .wrapper {
 }
 
 .header {
-  background-color: #E03C16;
+  background-color: #66876a;
   margin: 0;
   padding: 0;
 }
@@ -49,15 +49,16 @@ padding: 0 10px;
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 1.5em;
     font-weight: 300;
-    color: #2E3832;
+    color: #fbfbfb;
     text-align: center;
 }
 
 .no_btn_link_head {
-    background-color: #E03C16;
+    background-color: #66876a;
     text-align: center;
-    color: #EEFFE9;
+    color: #fbfbfb;
     padding: 10px;
+    text-transform: uppercase;
     border: none;
 }
 
@@ -69,18 +70,19 @@ padding: 0 10px;
 
 a {
   background: #E98A15;
-  color: #EEFFE9;
+  color: #fbfbfb;
   display: inline-block;
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: bold;
   letter-spacing: 1px;
   text-decoration: none;
   padding: 10px 25px 10px 25px;
+  text-transform: uppercase;
 }
 
 .post_link, .post_link:hover {
   text-transform: uppercase;
-  color: #5B6D62;
+  color: #fbfbfb;
   font-weight: 600;
   background-color: #EEFFE9;
   padding: 0 2px 0 2px;
@@ -94,7 +96,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1em;
+  font-size: 1.2em;
   font-family: 'Open Sans', sans-serif;
 }
 
