--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ a {
   text-transform: uppercase;
   color: #fbfbfb;
   font-weight: 600;
-  background-color: #EEFFE9;
+  background-color: #E98A15;
   padding: 0 2px 0 2px;
   border: 0;
 }
