Added Skeleton css.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 	<html>
 		<head>
+			<!-- Get responsive -->
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<!--[if lt IE 9]>
+			<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+			<![endif]-->
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
