--- a/css/main.css
+++ b/css/main.css
@@ -82,16 +82,28 @@
 
 }
 
-html, body, .wrapper {
+/*html, body, .wrapper {
     width: 100%;
     height: 100%;
     min-height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #fbfbfb;
-    font-family: 'Open Sans', sans-serif;
-    color: #2E3832;
-}
+}*/
+
+html, .wrapper {
+  font-size: 62.5%;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0; }
+body {
+  font-size: 1.75em; /* currently ems cause chrome bug misinterpreting rems on body element */
+  line-height: 1.6;
+  font-weight: 400;
+  font-family: "Raleway", "Open-Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #fbfbfb;
+  color: #2E3832; }
 
 .header_rule {
   background-color: #e8083c;
@@ -109,12 +121,6 @@ html, body, .wrapper {
   margin: 0;
   padding: 0;
 }
-
-/*.container {
-max-width: 940px;
-margin: 0 auto;
-padding: 0 10px;
-}*/
 
 .nav {
   margin: 0;
@@ -197,7 +203,7 @@ p {
   margin-top: 0;
   line-height: 1.4em;
   color: #333;
-  font-family: font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 ul {
