--- a/css/main.css
+++ b/css/main.css
@@ -90,15 +90,16 @@
     padding: 0;
 }*/
 
-html, .wrapper {
+html, body {
   font-size: 62.5%;
   width: 100%;
   height: 100%;
   min-height: 100%;
   margin: 0;
   padding: 0; }
-body {
-  font-size: 1.75em; /* currently ems cause chrome bug misinterpreting rems on body element */
+
+body, .wrapper {
+  font-size: 1.75em;
   line-height: 1.6;
   font-weight: 400;
   font-family: "Raleway", "Open-Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
