--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,22 @@
 layout: default
 ---
 <div class="container">
-<h3>{{ page.title }}</h3>
-<h4 class="meta">{{ page.date | date_to_string }}</h4>
+  <h3>{{ page.title }}</h3>
+  <h4 class="meta">{{ page.date | date_to_string }}</h4>
 
-<div class="post">
-  {{ content }}
-</div>
+  <div class="post">
+    {{ content }}
+  </div>
+
+    <div class="two-thirds" class="column">
+      <div class="PageNavigation">
+        {% if page.previous.url %}
+          <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+        {% endif %}
+        {% if page.next.url %}
+          <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+        {% endif %}
+      </div>
+    </div>
+
 </div>
