--- a/_layouts/testing2.html
+++ b/_layouts/testing2.html
@@ -39,7 +39,7 @@
   </div>
 </section>
 
-<!-- Introduction -->
+<!-- About -->
 
 <section data-sr id="about" class="about u-full-width">
   <div class="container">
@@ -56,7 +56,7 @@
 
 <section data-sr id="blog" class="blog u-full-width featured-bg-image">
   <h4 class="centered">
-    <button class="button inverted"><a href="/blog">She Be Bloggin'</a></button>
+    <a href="/blog"><button class="button inverted">She Be Bloggin'</button></a>
   </h4>
 </section>
 
