--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,19 @@
----
-layout: default
----
-
+<!DOCTYPE html>
+	<html>
+		<head>
+			<!-- Get responsive -->
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<!--[if lt IE 9]>
+			<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+			<![endif]-->
+			<title>{{ page.title }}</title>
+			<!-- link to main stylesheet -->
+      <link rel="stylesheet" href="/css/normalize.css">
+      <link rel="stylesheet" href="/css/skeleton.css">
+      <link rel="stylesheet" href="/css/main.css">
+			<link href="https://fonts.googleapis.com/css?family=Cabin|Catamaran:700|Dosis" rel="stylesheet">
+		</head>
+		<body>
 
 <div class="container">
 
@@ -26,3 +38,5 @@ layout: default
   </div>
 
 </div>
+
+</body>
