--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -132,9 +132,11 @@ p {
 
 /* Links */
 a {
-  color: #1EAEDB; }
+  color: #fff;
+  text-decoration: none;
+}
 a:hover {
-  color: #0FA0CE; }
+  color: #fff; }
 
 
 /* Buttons */
