--- a/css/main.css
+++ b/css/main.css
@@ -1,361 +1,234 @@
-.container {
-  position: relative;
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0 20px;
-  box-sizing: border-box; }
-.column,
-.columns {
-  width: 100%;
-  float: left;
-  box-sizing: border-box; }
 
-/* For devices larger than 400px */
-@media (min-width: 400px) {
-  .container {
-    width: 85%;
-    padding: 0; }
+/* Dosis */
+@font-face {
+    font-family: 'Dosis', sans-serif;
+    font-weight: normal;
+    font-style: normal;
 }
 
-/* For devices larger than 550px */
-@media (min-width: 550px) {
-  .container {
-    width: 80%; }
-  .column,
-  .columns {
-    margin-left: 4%; }
-  .column:first-child,
-  .columns:first-child {
-    margin-left: 0; }
+/* Cabin */
+@font-face {
+    font-family: 'Cabin', sans-serif;
+    font-weight: normal;
+    font-style: normal;
+}
 
-  .one.column,
-  .one.columns                    { width: 4.66666666667%; }
-  .two.columns                    { width: 13.3333333333%; }
-  .three.columns                  { width: 22%;            }
-  .four.columns                   { width: 30.6666666667%; }
-  .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 48%;            }
-  .seven.columns                  { width: 56.6666666667%; }
-  .eight.columns                  { width: 65.3333333333%; }
-  .nine.columns                   { width: 74.0%;          }
-  .ten.columns                    { width: 82.6666666667%; }
-  .eleven.columns                 { width: 91.3333333333%; }
-  .twelve.columns                 { width: 100%; margin-left: 0; }
+/* Catamaran */
+@font-face {
+    font-family: 'Catamaran', sans-serif;
+    font-weight: normal;
+    font-style: normal;
+}
 
-  .one-third.column               { width: 30.6666666667%; }
-  .two-thirds.column              { width: 65.3333333333%; }
-
-  .one-half.column                { width: 48%; }
-
-  /* Offsets */
-  .offset-by-one.column,
-  .offset-by-one.columns          { margin-left: 8.66666666667%; }
-  .offset-by-two.column,
-  .offset-by-two.columns          { margin-left: 17.3333333333%; }
-  .offset-by-three.column,
-  .offset-by-three.columns        { margin-left: 26%;            }
-  .offset-by-four.column,
-  .offset-by-four.columns         { margin-left: 34.6666666667%; }
-  .offset-by-five.column,
-  .offset-by-five.columns         { margin-left: 43.3333333333%; }
-  .offset-by-six.column,
-  .offset-by-six.columns          { margin-left: 52%;            }
-  .offset-by-seven.column,
-  .offset-by-seven.columns        { margin-left: 60.6666666667%; }
-  .offset-by-eight.column,
-  .offset-by-eight.columns        { margin-left: 69.3333333333%; }
-  .offset-by-nine.column,
-  .offset-by-nine.columns         { margin-left: 78.0%;          }
-  .offset-by-ten.column,
-  .offset-by-ten.columns          { margin-left: 86.6666666667%; }
-  .offset-by-eleven.column,
-  .offset-by-eleven.columns       { margin-left: 95.3333333333%; }
-
-  .offset-by-one-third.column,
-  .offset-by-one-third.columns    { margin-left: 34.6666666667%; }
-  .offset-by-two-thirds.column,
-  .offset-by-two-thirds.columns   { margin-left: 69.3333333333%; }
-
-  .offset-by-one-half.column,
-  .offset-by-one-half.columns     { margin-left: 52%; }
+/* Personal Flavour */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
 
 }
 
-/*html, body, .wrapper {
+/* Typography */
+
+body {
+  font-size: 18px;
+  color: #222222;
+  font-family: "Cabin", "Raleway", Helvetica, Arial, sans-serif;
+}
+h1, h3, h5{
+  font-family: "Cabin", "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+h4 {
+  font-size: 22px;
+}
+h3 {
+  font-size: 28px;
+}
+
+/* Custom ultilities */
+  /* Centered */
+
+  .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+  }
+  .vertical-centered {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
     width: 100%;
-    height: 100%;
-    min-height: 100%;
-    margin: 0;
-    padding: 0;
-}*/
 
-html, body {
-  font-size: 62.5%;
-  width: 100%;
-  height: 100%;
-  min-height: 100%;
-  margin: 0;
-  padding: 0; }
+  }
+  /* Separator */
 
-body, .wrapper {
-  font-size: 1.75em;
-  line-height: 1.6;
-  font-weight: 400;
-  font-family: "Raleway", "Open-Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #fbfbfb;
-  color: #2E3832; }
-
-.header_rule {
-  background-color: #e8083c;
-  height: 2%;
-  width: auto;
-}
-
-#header_img {
-  width: 100%;
-  height: 100%;
-}
-
-.header {
-  background-color: #66876a;
-  margin: 0;
-  padding: 0;
-}
-
-.nav {
-  margin: 0;
-  padding: 0;
-}
-
-.header ul {
-    font-family: 'Open Sans Condensed', sans-serif;
-    list-style: none;
-    font-weight: 300;
-}
-
-.nav li {
-    display: inline-block;
-    margin-right: 20px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 1.5em;
-    font-weight: 300;
-    color: #fbfbfb;
+  .separator {
+    position: relative;
+    margin-bottom: 1.7em;
+    padding-bottom: 1.7em;
     text-align: center;
-}
-
-.no_btn_link_head {
-    background-color: #66876a;
-    text-align: center;
-    color: #fbfbfb;
-    padding: 10px;
+    font-weight: bold;
     text-transform: uppercase;
-    border: none;
+    color: inherit;
+  }
+  .separator:before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 86px;
+    height: 2px;
+    background-color: #222;
+
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+  }
+  .separator.orange:before {
+    background-color: #d87843;
+  }
+
+
+/* Button inverted */
+
+.button.inverted {
+  font-size: inherit;
+  padding: 25px 70px;
+  color: white;
+  height: auto;
+  border: 3px solid white;
+  text-transform: none;
+  font-size: 26px;
+  font-family: "Catamaran";
 }
 
-.no_btn_link_head:hover {
-  font-family: 'Open Sans Condensed', sans-serif;
-  border: none;
+.button.inverted:hover {
+  background: white;
+  color: #222;
 }
 
-a {
-  background: #E98A15;
-  color: #fbfbfb;
-  display: inline-block;
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-weight: bold;
-  letter-spacing: 1px;
-  text-decoration: none;
-  padding: 10px 25px 10px 25px;
-  text-transform: uppercase;
+/* =Section general styling
+-------- */
+
+section {
+  text-align: center;
+  padding: 80px 0;
 }
 
-.post_link, .post_link:hover {
-  text-transform: uppercase;
-  color: #fbfbfb;
-  font-weight: 600;
-  background-color: #E98A15;
-  padding: 0 2px 0 2px;
-  border: 0;
+.blog:before {
+  background: url("files/NW trip - Seattle 2.jpg");
+  background-position: 50% 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 2rem;
-  font-weight: 300; }
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 3.0rem; line-height: 2;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.3;  letter-spacing: 0; }
-
-/* Larger than phablet */
-@media (min-width: 550px) {
-  h1 { font-size: 5.0rem; }
-  h2 { font-size: 4.2rem; }
-  h3 { font-size: 3.6rem; }
-  h4 { font-size: 3.0rem; }
-  h5 { font-size: 2.4rem; }
-  h6 { font-size: 1.5rem; }
+.featured-bg-image {
+  position: relative;
+  background-color: #222222;
+  color: white;
+  min-height: 500px;
+}
+.featured-bg-image:before {
+  content: '';
+  position: absolute;
+  top: 0; right: 0; left: 0; bottom: 0;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  opacity: .35;
 }
 
-p {
-  margin-top: 0;
-  line-height: 1.4em;
-  color: #333;
-  font-family: 'Open Sans', sans-serif;
+.footer {
+  content: '';
+  background-color: white;
+  color: black;
 }
 
-ul {
-  list-style: circle inside; }
-ol {
-  list-style: decimal inside; }
-ol, ul {
-  padding-left: 0;
-  margin-top: 0; }
-ul ul,
-ul ol,
-ol ol,
-ol ul {
-  margin: 1.5rem 0 1.5rem 3rem;
-  font-size: 90%; }
-li {
-  margin-bottom: 1rem; }
+/* =Hero
+-------- */
 
-ul.posts {
-    margin: 20px auto 40px;
-    font-size: 1.5em;
+
+.hero {
+  padding: 0;
+  min-height: 500px;
+  text-align: center;
+  position: relative;
+  background-color: #d56d4d; /* layer fill content */
+  color: white;
+}
+.hero-image {
+  background: url("files/Butchart Gardens 2.jpg") no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  opacity: .9;
+}
+.hero-image:after {
+  content: '';
+  opacity: .3; /* layer alpha */
+  background-image: -moz-linear-gradient(right, #00cc99 0%, #99ffcc 100%); /* gradient overlay */
+  background-image: -o-linear-gradient(right, #00cc99 0%, #99ffcc 100%); /* gradient overlay */
+  background-image: -webkit-linear-gradient(right, #00cc99 0%, #99ffcc 100%); /* gradient overlay */
+  background-image: linear-gradient(right, #00cc99 0%, #99ffcc 100%); /* gradient overlay */
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+}
+.hero h2 {
+  font-size: 24px;
 }
 
-ul.posts li {
-    list-style: none;
+.hero p {
+  padding: 0 15%;
+}
+.hero .separator:before {
+  background-color: white;
 }
 
-blockquote {
-  border-left: 4px solid #5B6D62;
-  padding-left: 10px;
-  font-family: 'Raleway', sans-serif;
-  font-size: 1.5em;
-  color: #5B6D62;
-  text-transform: uppercase;
-  line-height: 1.5em;
-}
+/* Clients */
 
-.square_img {
-  max-width: 250px;
-  height: 250px;
+.blog ul {
+  list-style: none;
+  display: inline-table;
+  width: 35%;
 }
-
-.sidebar {
-  display: inline-block;
-  max-width: 250px;
-}
-
-.right {
-  width: 60%;
-  height: 100%;
-  padding-left: 20px;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.buffer {
-  height: 10%;
-}
-
-#bottom_margin {
-  line-height: 3em;
-}
-
-/* Code
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-code {
-  padding: .2rem .5rem;
-  margin: 0 .2rem;
-  font-size: 90%;
-  white-space: nowrap;
-  background: #F1F1F1;
-  border: 1px solid #E1E1E1;
-  border-radius: 4px; }
-pre > code {
+.blog li {
   display: block;
-  padding: 1rem 1.5rem;
-  white-space: pre; }
-
-/* Tables
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-th,
-td {
-  padding: 12px 15px;
-  text-align: left; }
-th:first-child,
-td:first-child {
-  padding-left: 0; }
-th:last-child,
-td:last-child {
-  padding-right: 0; }
-
-/* Spacing
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-button,
-.button {
-  margin-bottom: 1rem; }
-input,
-textarea,
-select,
-fieldset {
-  margin-bottom: 1.5rem; }
-pre,
-blockquote,
-dl,
-figure,
-table,
-form {
-  margin-bottom: 2.5rem; }
-
-hr {
-  margin-top: 3rem;
-  margin-bottom: 3.5rem;
-  border-width: 0;
-  border-top: 1px solid #E1E1E1; }
-
-/* Self Clearing Goodness */
-.container:after,
-.row:after,
-.u-cf {
-  content: "";
-  display: table;
-  clear: both; }
-
-  .PageNavigation {
-  font-size: 14px;
-  display: block;
-  width: auto;
-  overflow: hidden;
 }
 
-.PageNavigation a {
-  display: block;
-  float: left;
-  margin: 1em 0;
-}
-
-.PageNavigation .next {
-  text-align: right;
+.recent_posts_list {
+  font-family: font-family: "Dosis", Helvetica, Arial, sans-serif;
 }
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (max-width: 400px) {
+  .button.inverted {
+    padding: 15px;
+  }
+}
+@media (min-width: 400px)  and (max-width: 750px) {
+}
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {}
+@media (min-width: 550px) and (max-width: 750px) {
+}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
+@media (min-width: 750px) {
+}
 
 /* Larger than desktop */
-@media (min-width: 1000px) {}
+@media (min-width: 1000px) {
+}
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
