--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,20 +41,24 @@
 
 <!-- About -->
 
-<section data-sr id="about" class="about u-full-width">
+<section id="about" class="about u-full-width">
   <div class="container">
     <div class="row">
       <div class="twelve columns">
         <h3 class="separator">About</h3>
-        <h4>Something about me. Something more about me. Oh, how I love ice cream.</h4>
+				<h4>Museum-junkie turned computer programmer. (Almost.)</h4>
+				<ul class="img_about">
+					<li class="one-third columns"><img src='css/files/lori-500x500.jpg' /></li>
+					<li class="two-thirds columns"><p>I'm chronicling my time at The Iron Yard as I learn Ruby on Rails and become the coding ninja everyone wishes they could be. I'm hoping to solve problems in new ways and sprinkle happiness and curiosity along the way. Oh, and I eat a lot of ice cream.</p></li>
+				</ul>
       </div>
     </div>
-  </div>
+	</div>
 </section>
 
 <!-- Blog -->
 
-<section data-sr id="blog" class="blog u-full-width featured-bg-image">
+<section id="blog" class="blog u-full-width featured-bg-image">
 	<div class="container">
     <div class="row">
       <div class="twelve columns">
@@ -73,7 +77,7 @@
 
 <!-- Footer -->
 
-<section data-sr class="footer u-full-width">
+<section class="footer u-full-width">
   <div class="container">
     <div class="row">
       <div class="twelve columns">
