Fixing broken image link on about.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
         <h3 class="separator">About</h3>
 				<h4>Museum-junkie turned computer programmer. (Almost.)</h4>
 				<ul class="img_about">
-					<li class="one-third columns"><img src='css/files/lori-500x500.jpg' /></li>
+					<li class="one-third columns"><img src='http://i.imgur.com/ByFkAEl.jpg' /></li>
 					<li class="two-thirds columns"><p>I'm chronicling my time at The Iron Yard as I learn Ruby on Rails and become the coding ninja everyone wishes they could be. I'm hoping to solve problems in new ways and sprinkle happiness and curiosity along the way. Oh, and I eat a lot of ice cream.</p></li>
 				</ul>
       </div>
