--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,28 +15,39 @@
 		</head>
 		<body>
 
-<div class="container">
+			<section id="hero" class="hero u-full-width">
+			  <div class="hero-image"></div>
+				<div class="topcorner"><a href="/">HOME</a></div>
+			  <div class="container centered">
+			    <div class="twelve columns">
+			      <h1 class="separator">busy lori bee</h1>
+			      <h2>Reporting from the Wilds of The Iron Yard, Durham.</h2>
+			    </div>
+			  </div>
+			</section>
 
-  <h3>{{ page.title }}</h3>
-  <h4 class="meta">{{ page.date | date_to_string }}</h4>
+			<div class="container">
+				<div class="buffer"></div>
+			  <h3>{{ page.title }}</h3>
+			  <h4 class="meta">{{ page.date | date_to_string }}</h4>
 
-  <div class="post">
-    {{ content }}
-  </div>
+			  <div class="post">
+			    {{ content }}
+			  </div>
 
-  <div class="row">
-    <div class="four columns">
-      <div class="PageNavigation">
-        {% if page.previous.url %}
-          <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
-        {% endif %}
-        {% if page.next.url %}
-          <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
-        {% endif %}
-      </div>
-    </div>
-  </div>
-
-</div>
+			  <div class="row">
+			    <div class="twelve columns">
+			      <div class="PageNavigation">
+			        {% if page.previous.url %}
+			          <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+			        {% endif %}
+			        {% if page.next.url %}
+			          <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+			        {% endif %}
+			      </div>
+			    </div>
+			  </div>
+				<div class="buffer"></div>
+			</div>
 
 </body>
