Added github link to homepage about section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,11 @@
 					</ul>
 	      </div>
 	    </div>
+			<div class="row">
+				<h4 class="centered-below">
+					<button class="button">Github</button>
+				</h4>
+			</div>
 		</div>
 	</section>
 
