--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,16 @@ blockquote {
     -o-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
   }
+  .centered-below {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+  }
   .vertical-centered {
     position: absolute;
     top: 50%;
@@ -148,7 +158,7 @@ blockquote {
 
 .button.inverted {
   font-size: inherit;
-  padding: 25px 70px;
+  padding: 20px 70px;
   color: white;
   height: auto;
   border: 3px solid white;
