Need to fix home button link on post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,13 @@
 
 			<section id="hero" class="hero u-full-width">
 			  <div class="hero-image"></div>
-				<div class="topcorner"><a href="/">HOME</a></div>
+				<div class="topcorner"
+					<div class="row">
+						<h4 class="centered-below">
+							<button <a href="/" class="button-home">HOME</button>
+						</h4>
+					</div>
+				</div>
 			  <div class="container centered">
 			    <div class="twelve columns">
 			      <h1 class="separator">busy lori bee</h1>
