--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,6 @@ h3 {
    top: 0;
    right: 0;
    border-radius: 0 0 0 0;
-   background-color: #824F51;
    padding: 3%;
 
   }
@@ -153,6 +152,17 @@ blockquote {
     background-color: #d87843;
   }
 
+.button-home {
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+.button-home:hover {
+  background: #fff;
+  border-color: #fff;
+  color: black;
+  outline: 0;
+}
 
 /* Button inverted */
 
