Fixed white separator in blog section. added home link to post pages layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,16 +46,16 @@
 	    <div class="row">
 	      <div class="twelve columns">
 	        <h3 class="separator">About</h3>
-					<h4>Museum-junkie turned computer programmer. (Almost.)</h4>
+					<h4>Museum-junkie turned computer programmer.</h4>
 					<ul class="img_about">
 						<li><img src='http://i.imgur.com/ByFkAEl.jpg' /></li>
-						<li><p>I'm chronicling my time at The Iron Yard as I learn Ruby on Rails and become the coding ninja everyone wishes they could be. I'm hoping to solve problems in new ways and sprinkle happiness and curiosity along the way. Oh, and I eat a lot of ice cream.</p></li>
+						<li><p>I'm chronicling my time at The Iron Yard as I learn Ruby on Rails and become the coding ninja everyone wishes they could be. I'm hoping to solve problems in new ways and sprinkle happiness and curiosity along the way. Oh, and I eat a lot of ice cream and dominate at trivia.</p></li>
 					</ul>
 	      </div>
 	    </div>
 			<div class="row">
 				<h4 class="centered-below">
-					<button class="button">Github</button>
+					<a href="https://github.com/lburl01" class="button">Github</a>
 				</h4>
 			</div>
 		</div>
@@ -67,7 +67,7 @@
 		<div class="container">
 	    <div class="row">
 	      <div class="twelve columns">
-	        <h3 class="separator">She Be Bloggin'</h3>
+	        <h3 class="separator white">She Be Bloggin'</h3>
 					<div class="recent_posts_list">
 						<ul>
 							{% for post in site.posts limit:5 %}
