--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@
 				<div class="topcorner"
 					<div class="row">
 						<h4 class="centered-below">
-							<button <a href="/" class="button-home">HOME</button>
+							<a href="/" class="button-home">HOME</a>
 						</h4>
 					</div>
 				</div>
