Added contact button to post pages and homepage

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,7 @@
 			<div class="row">
 				<h4 class="centered-below">
 					<a href="https://github.com/lburl01" class="button">Github</a>
+					<a href="mailto:loribbaumgartner@gmail.com" class="button">Contact</a>
 				</h4>
 			</div>
 		</div>
