--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,8 @@
 				<div class="topcorner"
 					<div class="row">
 						<h4 class="centered-below">
-							<a href="/" class="button-home">HOME</a>
+							<a href="/" class="button">HOME</a>
+							<a href="mailto:loribbaumgartner@gmail.com" class="button">Contact</a>
 						</h4>
 					</div>
 				</div>
