--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@ blockquote {
     background-color: #fff;
   }
 
-button, .button-home {
+button {
   border: 2px solid #fff;
   color: #fff;
   font-family: "Catamaran";
@@ -167,7 +167,7 @@ button, .button-home {
   white-space: nowrap;
 }
 
-button, .button-home:hover {
+button {
   background: #fff;
   border-color: #fff;
   color: black;
